# yuki_clanbattle

./: .gitignore  README.md  __init__.py  config..example.json  config.example.json  config.py  db.py  exception.py  protobuf_pyi_genter.py  pyproject.toml  utils.py  ws_client_test.py  ws_protocol.proto  ws_protocol_pb2.py  ws_protocol_pb2.pyi
docs/: installation_guide.md
test/: test_bot.py
