[tool.poetry]
name = "yukiclanbattle"
version = "0.2.3"
description = "Princess Connect Re:Dive clanbattle bot based on NoneBot2"
authors = ["ColdThunder11 <lslyj27761@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ColdThunder11/yuki_clanbattle"
packages = []
keywords = ["bot"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.8.1"
nonebot2 = "^2.0.0"
nonebot-adapter-onebot = "^2.2.0"
peewee = "^3.16.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"